--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="hero-content">
 
             <h1 class="h1 section-title">
-              The Best online Platform to <span class="span">Enhance</span> your skills
+              The Best Best online Platform to <span class="span">Enhance</span> your skills
             </h1>
 
             <p class="hero-text">
